# Zk-benchmark

./: .gitmodules  README.md
comb_auction/: README.md
comb_auction/benchmark/: bench_gnark.py  bench_zisk.py  benchmark_results.json  benchmark_results_icicle.json  plot_gnark_bench.py  plot_zisk_bench.py  pyproject.toml  zisk_bench_results.jsonl
comb_auction/circuit/comb_gnark/: .gitignore  circuit.go  compile_test.go  go.mod  go.sum  profile_test.go  proof.json
comb_auction/circuit/comb_gnark/contract/: .gitignore
comb_auction/circuit/comb_gnark/contract/script/: DeployCombAuctionVerifier.sol
comb_auction/circuit/comb_gnark/contract/src/: CombAuctionVerifier.sol
comb_auction/circuit/comb_gnark/prover/: gpu_icicle.go  gpu_none.go  io_helpers.go  main.go  main_test.go
comb_auction/circuit/comb_gnark/setup/: main.go
comb_auction/circuit/zisk/: .gitignore
comb_auction/circuit/zisk/auction_caps/: Cargo.toml
comb_auction/circuit/zisk/auction_caps/src/: lib.rs
comb_auction/circuit/zisk/guest/: Cargo.toml
comb_auction/circuit/zisk/guest/src/: main.rs
comb_auction/circuit/zisk/host/: Cargo.toml
comb_auction/circuit/zisk/host-synthetic/: Cargo.toml
comb_auction/circuit/zisk/host-synthetic/src/: main.rs
comb_auction/circuit/zisk/host/src/: main.rs
comb_auction/data/: .env.example  .gitignore  analyse_auctions.py  fetch.py  pyproject.toml
comb_auction/data/analysis_out/: per_auction.csv
gnark/multi-schnorr/: .gitignore  README.md  circuit.go  compile_test.go  go.mod  go.sum  keygen.sh  profile_test.go  prove.sh  setup_and_deploy_sepolia.sh
gnark/multi-schnorr/.devcontainer/: devcontainer.json
gnark/multi-schnorr/cmd/: main.go
gnark/multi-schnorr/contract/: .gitignore  foundry.toml
gnark/multi-schnorr/contract/broadcast/DeployMultiSchnorrVerifier.s.sol/11155111/: run-1761087097175.json  run-1761286017758.json  run-1761291251284.json  run-1761293134327.json  run-1762346353074.json  run-1762347755769.json  run-1762348011525.json  run-1762348934243.json  run-1762349195483.json  run-1762349349601.json  run-latest.json
gnark/multi-schnorr/contract/script/: DeployMultiSchnorrVerifier.s.sol
gnark/multi-schnorr/contract/src/: MultiSchnorrVerifier.sol
gnark/multi-schnorr/keygen/: main.go
gnark/multi-schnorr/prover/: main.go
gnark/multi-schnorr/setup/: main.go  template_sol.go
gnark/multi-schnorr/utils/: candidate.go  keygen.go  merkle.go  prepare.go
multi-zkvm/: .gitignore  Cargo.toml  README.md
multi-zkvm/benchmark/: benchmark_results.json  plot_benchmarks.py
multi-zkvm/common/: Cargo.toml
multi-zkvm/common/src/: lib.rs
multi-zkvm/guest/: Cargo.toml
multi-zkvm/guest-jolt/: Cargo.toml
multi-zkvm/guest-jolt/src/: main.rs
multi-zkvm/guest-pico/: Cargo.toml
multi-zkvm/guest-pico/src/: main.rs
multi-zkvm/guest-risc0/: Cargo.toml
multi-zkvm/guest-risc0/src/: main.rs
multi-zkvm/guest-sp1/: Cargo.toml
multi-zkvm/guest-sp1/src/: main.rs
multi-zkvm/guest-zisk/: Cargo.toml
multi-zkvm/guest-zisk/src/: main.rs
multi-zkvm/guest/src/: crypto.rs  lib.rs
multi-zkvm/host/: Cargo.toml
multi-zkvm/host-native/: Cargo.toml
multi-zkvm/host-native/src/: main.rs
multi-zkvm/host/src/: main.rs
