[workspace]
members = ["host", "guest", "common", "host-native"]
resolver = "2"
exclude = ["guest-sp1", "guest-risc0", "guest-zisk", "guest-pico"]

[workspace.dependencies]
ere-zkvm-interface = { git = "https://github.com/eth-act/ere.git", tag="v0.0.13"}
ere-dockerized = { git = "https://github.com/eth-act/ere.git"}
ere-sp1        =  { git = "https://github.com/eth-act/ere.git", tag = "v0.0.13"}
ere-risc0        = {git = "https://github.com/eth-act/ere.git", tag = "v0.0.13"}
# ere-pico        = { git = "https://github.com/eth-act/ere.git", tag = "v0.0.13"}
ere-zisk        = { git = "https://github.com/eth-act/ere.git", tag = "v0.0.13"}

# utils
anyhow = { version = "1.0.86", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
