[workspace]
members = ["host", "guest", "common", "host-native"]
resolver = "2"
exclude = ["guest-sp1", "guest-risc0", "guest-zisk", "guest-pico"]

[workspace.dependencies]
ere-zkvm-interface = { git = "https://github.com/eth-act/ere.git", tag = "v0.1.6" }
ere-dockerized = { git = "https://github.com/eth-act/ere.git",   tag = "v0.1.6" }
ere-sp1        =  { git = "https://github.com/eth-act/ere.git",  tag = "v0.1.6" }
ere-risc0        = {git = "https://github.com/eth-act/ere.git",  tag = "v0.1.6" }
ere-pico        = { git = "https://github.com/eth-act/ere.git",  tag = "v0.1.6" }
ere-zisk        = { git = "https://github.com/eth-act/ere.git",  tag = "v0.1.6" }

# utils
anyhow = { version = "1.0.98", default-features = false }
serde = { version = "1.0.98", features = ["derive"] }
serde_json = { version = "1.0.142", default-features = false }
# used by ere: can be bumped here as well
# serde v1.0.221
# anyhow v1.0.98
# serde_json v1.0.142
