[package]
name = "guest-zisk"
version = "0.1.0"
edition = "2021"

[dependencies]
guest  = { path = "../guest" }
common = { path = "../common" }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.13.0" }
k256 = {version = "0.13.3", default-features = false, features = ["schnorr"] }
tiny-keccak = { git = "https://github.com/0xPolygonHermez/zisk-patch-tiny-keccak.git", branch = "zisk", features = [ "keccak" ] }
