[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow           = { workspace = true }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
rand_core = "0.6"
serde            = { workspace = true }
serde_json       = { workspace = true }
ere-dockerized   = { workspace = true }
ere-zkvm-interface = { workspace = true }
common           = { path = "../common" }
tiny-keccak      = { git = "https://github.com/sp1-patches/tiny-keccak", tag = "patch-2.0.2-sp1-4.0.0", features = ["keccak"] }
k256             = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-5.0.0" }